# Projet_L3_TPS

./: .gitignore  CShPluginGame.h  CShTPSAmmo.cpp  CShTPSAmmo.h  CShTPSEnemy.cpp  README.md  generate_plugin_tps.bat  idees_rapport.odt  tps.project
Generic/Game/: sounds.xml
Generic/Levels/default_level/: default_level.level
Generic/Levels/default_level_3d/: default_level_3d.level
Generic/Levels/level_3d_00/: level_3d_00.level
Generic/Levels/presentation_level_virgil/: presentation_level_virgil.level
Generic/Levels/test_level/: test_level.level
Generic/Resources/Sprites/: tps.background.tga  tps.bullet.tga  tps.enemy.tga  tps.leveltest.tga  tps.player.tga
Generic/Resources/SpritesTemp/Dx9/: tps.sprite
Generic/Resources/Sprites_on_2/: tps.background.tga  tps.bullet.tga  tps.player.tga
Generic/Resources/Sprites_on_4/: tps.background.tga  tps.bullet.tga  tps.player.tga
Generic/Resources/String/: english.string_table  french.string_table  german.string_table  italian.string_table  spanish.string_table
latex/: LaTeX1.tex  pres.tex  rapport.tex
plugin-tps/: CMakeCache.txt  CMakeLists.txt
plugin-tps/Extension/: CMakeLists.txt  Extension.cpp  Extension.h  ExtensionTPS.configext
plugin-tps/PluginGame/: CMakeLists.txt  CShPluginGame.cpp  CShPluginGame.h  CShTPSAmmo.cpp  CShTPSAmmo.h  CShTPSCamera.cpp  CShTPSCamera.h  CShTPSCharacter.cpp  CShTPSCharacter.h  CShTPSCollisionsManager.cpp  CShTPSCollisionsManager.h  CShTPSEnemy.cpp  CShTPSEnemy.h  CShTPSGlobal.h  CShTPSGun.cpp  CShTPSGun.h  CShTPSPlayer.cpp  CShTPSPlayer.h
